--- a/index.html
+++ b/index.html
@@ -8,27 +8,41 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header>
-        <button class="open-menu" aria-label="Open Menu">
-            <img src="assets/img/hamburger.png" alt="open menu">
-        </button>
-      <nav class="bar">
-        <a id="logo" class="logo" href="index.html"><img class="logo" src="assets/img/logo.png" alt="Home logo"></a>
-
-          <ul class="menu">
-            <li><a href="#about"> About</a></li>
-            <li><a href="#skills"> Skills</a></li>
-            <li><a href="#projects"> Projects</a></li>
-            <li><a href="#contact"> Contact</a></li>
+<header class="header">
+    <nav class="navbar">
+        <a href="index.html" class="nav-logo">
+            <img height="50" width="50" src="assets/img/logo.png"/>
+        </a>
+        <ul class="nav-menu">
+            <li class="nav-item">
+                <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Contact</a>
+            </li>
         </ul>
-        <ul class="social">
-            <li><a href="#" class="github">
-                <img height="30" width="30" src="assets/img/GitHub.png" alt="GitHub">
-            </a></li>
-            <li><a href="#" class="lnkdn">
-                <img height="30" width="30" src="assets/img/linkedin.png" alt="Linkedin">
-            </a></li>
+        <ul class="nav-social">
+            <li class="social-item">
+                <a href="https://github.com/SoniaMestre" target="_blank">
+                    <img height="30" width="30" class="img-link" src="assets/img/GitHub.png" alt="Github link"> </a>
+            </li>
+            <li class="social-item">
+                <a href="https://www.linkedin.com/in/sònia-mestre-nadal/" target="_blank" >
+                    <img height="30" width="30" class="img-link" src="assets/img/linkedin.png" alt="Linkedin link"> </a>
+            </li>
         </ul>
-      </nav>
-    </header>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </nav>
+</header>
+<script src="assets/main.js"></script>
 </body>
