--- a/index.html
+++ b/index.html
@@ -14,30 +14,29 @@
             <img height="50" width="50" src="assets/img/logo.png"/>
         </a>
         <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
-            <ul class="nav-social">
-                <li class="social-item">
-                    <a href="https://github.com/SoniaMestre" target="_blank">
-                        <img height="30" width="30" class="img-link" src="assets/img/GitHub.png" alt="Github link"> </a>
-                </li>
-                <li class="social-item">
-                    <a href="https://www.linkedin.com/in/sònia-mestre-nadal/" target="_blank" >
-                    <img height="30" width="30" class="img-link" src="assets/img/linkedin.png" alt="Linkedin link"> </a>
-                </li>
-            </ul>
-
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+        </ul>
+     <!--   <ul class="nav-social">
+            <li class="social-item">
+              <a href="https://github.com/SoniaMestre" target="_blank">
+              <img height="30" width="30" class="img-link" src="assets/img/GitHub.png" alt="Github link"> </a>
+            </li>
+            <li class="social-item">
+              <a href="https://www.linkedin.com/in/sònia-mestre-nadal/" target="_blank" >
+              <img height="30" width="30" class="img-link" src="assets/img/linkedin.png" alt="Linkedin link"> </a>
+            </li>
+        </ul> -->
         <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -45,5 +44,18 @@
         </div>
     </nav>
 </header>
+    <main class="profile">
+        <div class="profile-coder">
+            <h1 class="profile-title">< coder ></h1>
+            <p class="profile-details">I'm a FullSack Coder</p>
+        </div>
+        <div class="profile-image">
+            <img class="face-img" src="assets/img/face-Sonia.jpg" alt="Developer">
+        </div>
+        <div class="profile-entrepreneur">
+            <h1 class="profile-title2">manager</h1>
+            <p class="profile-details2">Always willing to new adventures</p>
+        </div>
+</main>
 <script src="assets/main.js"></script>
 </body>
