css ordered design web first

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <li class="nav-item">
               <a href="#" class="nav-link">Contact</a>
             </li>
-        </ul>
-     <!--   <ul class="nav-social">
+            <div class="nav-social">
             <li class="social-item">
               <a href="https://github.com/SoniaMestre" target="_blank">
               <img height="30" width="30" class="img-link" src="assets/img/GitHub.png" alt="Github link"> </a>
@@ -36,7 +35,8 @@
               <a href="https://www.linkedin.com/in/sònia-mestre-nadal/" target="_blank" >
               <img height="30" width="30" class="img-link" src="assets/img/linkedin.png" alt="Linkedin link"> </a>
             </li>
-        </ul> -->
+            </div>
+        </ul>
         <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -47,15 +47,20 @@
     <main class="profile">
         <div class="profile-coder">
             <h1 class="profile-title">< coder ></h1>
-            <p class="profile-details">I'm a FullSack Coder</p>
+            <p class="profile-details">FullSack Coder, specialising in UX & Front end.</p>
         </div>
         <div class="profile-image">
             <img class="face-img" src="assets/img/face-Sonia.jpg" alt="Developer">
         </div>
         <div class="profile-entrepreneur">
-            <h1 class="profile-title2">manager</h1>
-            <p class="profile-details2">Always willing to new adventures</p>
+            <h1 class="profile-title2">[ MBA ]</h1>
+            <p class="profile-details2">Entrepreneur with 3 start-up intents willing for then next. </p>
         </div>
-</main>
+    </main>
+    <section class="works">
+        <div class="header-center">
+            <h3> my latest work</h3>
+        </div>
+    </section>
 <script src="assets/main.js"></script>
 </body>
