starting project html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header class="header">
     <nav class="navbar">
         <a href="index.html" class="nav-logo">
-            <img height="50" width="50" src="assets/img/logo.png"/>
+            <img height="50" width="50" src="assets/img/logo.png" alt="developerLogo"/>
         </a>
         <ul class="nav-menu">
             <li class="nav-item">
@@ -21,7 +21,7 @@
               <a href="#" class="nav-link">Skills</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Projects</a>
+              <a class="nav-link" href="html/projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Contact</a>
@@ -59,8 +59,17 @@
     </main>
     <section class="works">
         <div class="header-center">
-            <h3> my latest work</h3>
+            <h3>my latest work</h3>
         </div>
+        <div id="content-detail" style="opacity: 1; top: 0px">
+            <ul id="thumbs" class="thumbs clearfix">
+                <li>
+                    <a rhref
+                </li>
+            </ul>
+
+        </div>
+
     </section>
 <script src="assets/main.js"></script>
 </body>
