--- a/html/projects.html
+++ b/html/projects.html
@@ -53,20 +53,62 @@
       Copy and project manager.</p>
     </div>
     <div class="projectimage">
-      <img class="project-img" src="../assets/img/img_Sonia.jpg" alt="Programing Projects">
+      <img class="project-img" src="../assets/img/main_projects.png" alt="Programing Projects">
       </div>
 
     </div>
   </main>
   <section class="grid-container">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>
+    <ul id="thumbs">
+      <li class="works">
+        <a href="Sokjo.html">
+          <img class="photos" src="../assets/img/Sokjo_small.png" alt="Sokjo App">
+          <div class="description">
+            <span class="arrow-r" style="opacity: 0; right: 10px"></span>
+            <h4>Sokjo App</h4>
+            <p>UX design</p>
+          </div>
+        </a>
+      </li>
+      <li class="works">
+        <a href="">
+          <img class="photos" src="../assets/img/littlepress_small.png" alt="Littlepress App">
+          <div class="description">
+            <span class="arrow-r" style="opacity: 0; right: 10px"></span>
+            <h4>Littlepress App</h4>
+            <p>UX design & copies</p>
+          </div>
+        </a>
+      </li>
+      <li class="works">
+        <a href="">
+          <img class="photos" src="../assets/img/Mapit.png" alt="Mapit App">
+          <div class="description">
+            <span class="arrow-r" style="opacity: 0; right: 10px"></span>
+            <h4>Mapit App</h4>
+            <p>New business developer</p>
+          </div>
+        </a>
+      </li>
+    </ul>
   </section>
-
+  <footer id="footer">
+    <a href="../index.html" class="nav-copyright"> @SòniaMestre</a>
+    <ul class="nav-menu-footer">
+      <li class="nav-item-footer">
+        <a href="#" class="footer-nav-link">About</a>
+      </li>
+      <li class="nav-item-footer">
+        <a href="#" class="footer-nav-link">Skills</a>
+      </li>
+      <li class="nav-item-footer">
+        <a class="footer-nav-link" href="html/projects.html">Projects</a>
+      </li>
+      <li class="nav-item-footer">
+        <a href="#" class="footer-nav-link">Contact</a>
+      </li>
+    </ul>
+  </footer>
 
 <script src="assets/main.js"></script>
 </body>
