--- a/index.html
+++ b/index.html
@@ -57,19 +57,58 @@
             <p class="profile-details2">Entrepreneur with 3 start-up intents willing for then next. </p>
         </div>
     </main>
-    <section class="works">
-        <div class="header-center">
-            <h3>my latest work</h3>
-        </div>
-        <div id="content-detail" style="opacity: 1; top: 0px">
-            <ul id="thumbs" class="thumbs clearfix">
-                <li>
-                    <a rhref
+    <section class="gallery">
+        <h3>my latest work</h3>
+        <ul id="thumbs">
+                <li class="works">
+                    <a href="">
+                        <img class="photos" src="assets/img/Sokjo_small.png" alt="Sokjo App">
+                        <div class="description">
+                            <span class="arrow-r" style="opacity: 0; right: 10px"></span>
+                            <h4>Sokjo App</h4>
+                            <p>UX design</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="works">
+                    <a href="">
+                        <img class="photos" src="assets/img/littlepress_small.png" alt="Littlepress App">
+                        <div class="description">
+                            <span class="arrow-r" style="opacity: 0; right: 10px"></span>
+                            <h4>Littlepress App</h4>
+                            <p>UX design & copies</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="works">
+                    <a href="">
+                        <img class="photos" src="assets/img/Mapit.png" alt="Mapit App">
+                        <div class="description">
+                            <span class="arrow-r" style="opacity: 0; right: 10px"></span>
+                            <h4>Mapit App</h4>
+                            <p>New business developer</p>
+                        </div>
+                    </a>
                 </li>
             </ul>
 
-        </div>
-
     </section>
+    <footer id="footer">
+            <a href="index.html" class="nav-copyright"> @SòniaMestre</a>
+            <ul class="nav-menu-footer">
+                <li class="nav-item-footer">
+                    <a href="#" class="footer-nav-link">About</a>
+                </li>
+                <li class="nav-item-footer">
+                    <a href="#" class="footer-nav-link">Skills</a>
+                </li>
+                <li class="nav-item-footer">
+                    <a class="footer-nav-link" href="html/projects.html">Projects</a>
+                </li>
+                <li class="nav-item-footer">
+                    <a href="#" class="footer-nav-link">Contact</a>
+                </li>
+            </ul>
+    </footer>
 <script src="assets/main.js"></script>
 </body>
