--- a/html/Sokjo.html
+++ b/html/Sokjo.html
@@ -43,6 +43,55 @@
   </nav>
 </header>
 
+<!--Sokjo Intro-->
+  <main class="Sokjoprojectintro">
+    <div class="sokjointro">
+      <h1 class="sokjo-title">Sokjo app</h1>
+      <p class="sokjo-subtitle"> Banking app for kids</p>
+      <p class="sokjo-subtitle"> January 2021</p>
+      <p class="sokjo-text">I co-founded this project as COO and I design the architecture and content of the pages and the user experience.</p>
+    </div>
+    <div class="Sokjo-main-img">
+      <img class="Sokjo-main-image" src="../assets/img/Sokjo-07.png" alt="Sokjo Dev Project">
+    </div>
+  </main>
+<section class="Sokjo-examples">
+    <div>
+      <img class="Sokjo06" src="../assets/img/Sokjo-06.png" alt="Sokjo examples">
+      <div class="textcontainer">
+        <h2 class="titleexamples">The project</h2>
+        <p class="textexamples">Kids and teens of Europe are limited to use cash in an
+          increasingly cashless society. Struggling to understand finances, when lacking
+          financial education.<br>
+          Sokjo pretended to become the ultimate app to teach kids & teens about money and
+          entrepreneurialship. Kids would be able to ask their parents to send them money
+          and plan their weekly monthly allowances. Check their balance, make donations to
+          NGO and decide how much to spend or save. Also throught the app kids would be able
+          to finance their projects uploading a short video with and explanation of their
+          project and inviting their parents and family to co-finance it.</p>
+      </div>
+      <img class="Sokjo06" src="../assets/img/Sokjo-03.png" alt="Sokjo examples">
+      <div class="textcontainer">
+        <h2 class="titleexamples">The Challenge</h2>
+        <p class="textexamples">The challenge was to create a visual, simple and secure
+          bank app that would give parents confidence and would be easy for children to use.
+          From the first moment we focused on the  users needs, accompanying them step by
+          step in the creation of an account, with precise instructions and a facial
+          recognition system. <br>One of my tasks in this project was to design the architecture
+          of the app, define the style in order to make the app kids&teens friendly, write the copies and coordinate the design team that was designing the template.
+          <br>The result was the following Mock-Up:</p>
+      </div>
+      <img class="Sokjo06" src="../assets/img/Sokjo-04.png" alt="Sokjo examples">
+      <div class="textcontainer">
+        <h2 class="titleexamples">Mission accomplished</h2>
+        <img class="Sokjo06" src="../assets/img/Sokjo_kid.png" alt="Sokjo examples">
+        <img class="Sokjo06" src="../assets/img/Sokjo-news.png" alt="Sokjo examples">
+      </div>
+      <a href="https://xd.adobe.com/view/01d648de-cb27-4bc7-63f9-ef0c27dcaea4-77e7/" target="_blank" >
+    </div>
+
+</section>
+
 <footer id="footer">
   <a href="../index.html" class="nav-copyright"> @SòniaMestre</a>
   <ul class="nav-menu-footer">
