--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </a>
         <ul class="nav-menu">
             <li class="nav-item">
-              <a href="#" class="nav-link">About</a>
+              <a href="html/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link">Skills</a>
