--- a/html/Sokjo.html
+++ b/html/Sokjo.html
@@ -8,21 +8,21 @@
 <body>
 <header class="header">
   <nav class="navbar">
-    <a href="index.html" class="nav-logo">
+    <a href="../index.html" class="nav-logo">
       <img height="50" width="50" src="../assets/img/logo.png" alt="developerLogo"/>
     </a>
     <ul class="nav-menu">
       <li class="nav-item">
-        <a href="#" class="nav-link">About</a>
+        <a href="about.html" class="nav-link">About</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Skills</a>
+        <a href="skills.html" class="nav-link">Skills</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="projects.html">Projects</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="blog.html" class="nav-link">Blog</a>
       </li>
       <div class="nav-social">
         <li class="social-item">
@@ -84,28 +84,37 @@
       <img class="Sokjo06" src="../assets/img/Sokjo-04.png" alt="Sokjo examples">
       <div class="textcontainer">
         <h2 class="titleexamples">Mission accomplished</h2>
-        <img class="Sokjo06" src="../assets/img/Sokjo_kid.png" alt="Sokjo examples">
-        <img class="Sokjo06" src="../assets/img/Sokjo-news.png" alt="Sokjo examples">
+        <p class="textexamples">The challenge was to create a visual, simple and secure
+          bank app that would give parents confidence and would be easy for children to use.
+          From the first moment we focused on the  users needs, accompanying them step by
+          step in the creation of an account, with precise instructions and a facial
+          recognition system. <br>One of my tasks in this project was to design the architecture
+          of the app, define the style in order to make the app kids&teens friendly, write the copies and coordinate the design team that was designing the template.
+          <br>The result was the following Mock-Up:</p>
       </div>
-      <a href="https://xd.adobe.com/view/01d648de-cb27-4bc7-63f9-ef0c27dcaea4-77e7/" target="_blank" >
-    </div>
+        <div class="Sokjoprojectsuccess">
+          <a href="https://xd.adobe.com/view/01d648de-cb27-4bc7-63f9-ef0c27dcaea4-77e7/" target="_blank">
+            <img class="Sokjo07" src="../assets/img/sokjomockup.jpeg" alt="Sokjo examples"></a>
+            <a href="https://www.accio.gencat.cat/ca/serveis/banc-coneixement/cercador/BancConeixement/sokjo-banc-virtual-pels-mes-petits" target="_blank" >
+            <img class="Sokjo07" src="../assets/img/Sokjo_news2.jpeg" alt="Sokjo examples"></a>
 
+        </div>
 </section>
 
 <footer id="footer">
   <a href="../index.html" class="nav-copyright"> @SòniaMestre</a>
   <ul class="nav-menu-footer">
     <li class="nav-item-footer">
-      <a href="#" class="footer-nav-link">About</a>
+      <a href="about.html" class="footer-nav-link">About</a>
     </li>
     <li class="nav-item-footer">
-      <a href="#" class="footer-nav-link">Skills</a>
+      <a href="skills.html" class="footer-nav-link">Skills</a>
     </li>
     <li class="nav-item-footer">
-      <a class="footer-nav-link" href="html/projects.html">Projects</a>
+      <a class="footer-nav-link" href="projects.html">Projects</a>
     </li>
     <li class="nav-item-footer">
-      <a href="#" class="footer-nav-link">Contact</a>
+      <a href="blog.html" class="footer-nav-link">Blog</a>
     </li>
   </ul>
 </footer>
