--- a/html/about.html
+++ b/html/about.html
@@ -18,13 +18,13 @@
         <a href="#" class="nav-link">About</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Skills</a>
+        <a href="skills.html" class="nav-link">Skills</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="projects.html">Projects</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">Contact</a>
+        <a href="blog.html" class="nav-link">Blog</a>
       </li>
       <div class="nav-social">
         <li class="social-item">
@@ -32,7 +32,7 @@
             <img height="30" width="30" class="img-link" src="../assets/img/GitHub.png" alt="Github link"> </a>
         </li>
         <li class="social-item">
-          <a href="https://www.linkedin.com/in/sònia-mestre-nadal/" target="_blank" >
+          <a href="https:/linkedin.com/in/sònia-mestre-nadal/" target="_blank" >
             <img height="30" width="30" class="img-link" src="../assets/img/linkedin.png" alt="Linkedin link"> </a>
         </li>
       </div>
@@ -76,22 +76,34 @@
       <img class="photos" src="../assets/img/burriac.jpg" alt="beach volei">
     </li>
   </ul>
-
+</section>
+<section class="skills">
+  <div class="part-entrepreneur">
+    <h1 class="entrepreneur-title">Part entrepreneur</h1>
+    <p class="entrepreneur-list">Business Developer <br> Lean Startup <br> Business Plan <br> Project Manager</p>
+  </div>
+  <div class="profile-image">
+    <img class="face-img" src="../assets/img/graphic.png" alt="Skills">
+  </div>
+  <div class="profile-entrepreneur">
+    <h1 class="entrepreneur-title">Part Coder</h1>
+    <p class="entrepreneur-list">Full Stack <br> HTML/CSS <br> JavaScript <br> Java   </p>
+  </div>
 </section>
 <footer id="footer">
-  <a href="index.html" class="nav-copyright"> @SòniaMestre</a>
+  <a href="../index.html" class="nav-copyright"> @SòniaMestre</a>
   <ul class="nav-menu-footer">
     <li class="nav-item-footer">
-      <a href="#" class="footer-nav-link">About</a>
+      <a href="about.html" class="footer-nav-link">About</a>
     </li>
     <li class="nav-item-footer">
-      <a href="#" class="footer-nav-link">Skills</a>
+      <a href="skills.html" class="footer-nav-link">Skills</a>
     </li>
     <li class="nav-item-footer">
-      <a class="footer-nav-link" href="html/projects.html">Projects</a>
+      <a class="footer-nav-link" href="projects.html">Projects</a>
     </li>
     <li class="nav-item-footer">
-      <a href="#" class="footer-nav-link">Contact</a>
+      <a href="blog.html" class="footer-nav-link">Blog</a>
     </li>
   </ul>
 </footer>
