--- a/html/projects.html
+++ b/html/projects.html
@@ -15,16 +15,16 @@
       </a>
       <ul class="nav-menu">
         <li class="nav-item">
-          <a href="#" class="nav-link">About</a>
+          <a href="about.html" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Skills</a>
+          <a href="skills.html" class="nav-link">Skills</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Projects</a>
+          <a href="projects.html" class="nav-link">Projects</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Contact</a>
+          <a href="blog.html" class="nav-link">Blog</a>
         </li>
         <div class="nav-social">
           <li class="social-item">
@@ -96,16 +96,16 @@
     <a href="../index.html" class="nav-copyright"> @SòniaMestre</a>
     <ul class="nav-menu-footer">
       <li class="nav-item-footer">
-        <a href="#" class="footer-nav-link">About</a>
+        <a href="about.html" class="footer-nav-link">About</a>
       </li>
       <li class="nav-item-footer">
-        <a href="#" class="footer-nav-link">Skills</a>
+        <a href="skills.html" class="footer-nav-link">Skills</a>
       </li>
       <li class="nav-item-footer">
-        <a class="footer-nav-link" href="html/projects.html">Projects</a>
+        <a class="footer-nav-link" href="projects.html">Projects</a>
       </li>
       <li class="nav-item-footer">
-        <a href="#" class="footer-nav-link">Contact</a>
+        <a href="blog.html" class="footer-nav-link">Blog</a>
       </li>
     </ul>
   </footer>
