--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
               <a href="html/about.html" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Skills</a>
+              <a href="/html/skills.html" class="nav-link">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="html/projects.html">Projects</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact</a>
+              <a href="html/blog.html" class="nav-link">Blog</a>
             </li>
             <div class="nav-social">
             <li class="social-item">
@@ -47,7 +47,7 @@
     <main class="profile">
         <div class="profile-coder">
             <h1 class="profile-title">< coder ></h1>
-            <p class="profile-details">FullSack Coder, specialising in UX & Front end.</p>
+            <p class="profile-details">FullStack Coder, specialising in UX & Front end.</p>
         </div>
         <div class="profile-image">
             <img class="face-img" src="assets/img/face-Sonia.jpg" alt="Developer">
@@ -97,16 +97,16 @@
             <a href="index.html" class="nav-copyright"> @SòniaMestre</a>
             <ul class="nav-menu-footer">
                 <li class="nav-item-footer">
-                    <a href="#" class="footer-nav-link">About</a>
+                    <a href="html/about.html" class="footer-nav-link">About</a>
                 </li>
                 <li class="nav-item-footer">
-                    <a href="#" class="footer-nav-link">Skills</a>
+                    <a href="html/skills.html" class="footer-nav-link">Skills</a>
                 </li>
                 <li class="nav-item-footer">
                     <a class="footer-nav-link" href="html/projects.html">Projects</a>
                 </li>
                 <li class="nav-item-footer">
-                    <a href="#" class="footer-nav-link">Contact</a>
+                    <a href="html/blog.html.html" class="footer-nav-link">Blog</a>
                 </li>
             </ul>
     </footer>
