prova botó footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sònia Mestre | Full Stack Developer </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"/>
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
 <header class="header">
@@ -94,7 +95,8 @@
 
     </section>
     <footer id="footer">
-            <a href="index.html" class="nav-copyright"> @SòniaMestre</a>
+        <a id="button"></a>
+        <a href="index.html" class="nav-copyright"> @SòniaMestre</a>
             <ul class="nav-menu-footer">
                 <li class="nav-item-footer">
                     <a href="html/about.html" class="footer-nav-link">About</a>
@@ -111,4 +113,4 @@
             </ul>
     </footer>
 <script src="assets/main.js"></script>
-</body>
+g</body>
