back to top button centered

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     </section>
     <footer id="footer">
-        <a id="button"></a>
+        <button id="scrollToTopBtn">&#5169;</button>
         <a href="index.html" class="nav-copyright"> @SòniaMestre</a>
             <ul class="nav-menu-footer">
                 <li class="nav-item-footer">
